update generator of hafasController
